--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,10 @@
 <body>
 
 
-    <form action="http://localhost:9000/monthlyContribution" method="post" enctype="multipart/form-data">
-
-        <div>
-            branch
-            <input type="text" name="branch"  id="">
-        </div>
-
-        <div>
-            stateCode
-            <input type="text" name="stateCode" id="">
-        </div>
-
-        <div>
-            customerImage
-            <input type="file" name="customerImage" id="">
-        </div> 
-
-        <input type="submit" value="submit">
+    <form action="/monthlyContribution" method="post" enctype="multipart/form-data">
+        <input type="file" name="customerImage" accept="image/*">
+        <input type="submit" value="upload">
     </form>
-
 
 
 </body>
